<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/branco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="318dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altura"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_calcular"
            android:background="@color/verde_claro"
            android:textColor="@color/branco"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_limpar"
            android:background="@color/verde_claro"
            android:textColor="@color/branco"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnFechar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_fechar"
            android:background="@color/verde_claro"
            android:textColor="@color/branco"
            android:layout_margin="5dp" />
    </LinearLayout>
</LinearLayout>